tests/qml/invalid/InvalidAlias.qml
import QtQuick 2.0

Item {
  property alias x: 200
}
